[build-system]
requires = ["setuptools >= 40.9.0"]
build-backend = "setuptools.build_meta"
package-data = ['py.typed', 'lib/*/*/*.*', '_proto/*.py']

[tool.ruff]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
]
exclude = [
    'examples/whisper/whisper.cpp',
    'livekit/proto',
]